modified the api

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,12 @@ body {
     text-wrap: balance;
   }
 }
+
+@keyframes example {
+  0%   { left: 0; top: 0; }
+  25%  { left: 800px; top: 0; }
+  /* 50%  { left: 200px; top: 200px; } */
+  /* 75%  { left: 0; top: 200px; } */
+  100% { left: 0; top: 0; }
+}
+
